2008-03-12  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event):
	Don't take the stream lock when caching events. This is not necessary
	and results in a deadlock when seeking with rhythmbox (but not with
	totem or banshee for some reason).

2008-03-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Pizpot Gargravarr <pgargravarr at siriuscybernetics dot org>

	* gst/realmedia/rtspreal.c: (rtsp_ext_real_parse_sdp):
	Add the version field when creating the CONT chunk resulting in 
	the Author, Comment and Copyright tags not being parsed correctly.
	Fixes #521459.

2008-03-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event), (gst_mp3parse_chain):
	Remove trailing newlines from debug statements.

2008-03-04  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/dvdnav/dvdnavsrc.c:
	* ext/dvdnav/dvdnavsrc.h:
	Apply patch that adds some seeking support to dvdnav, and fixes it
	in various other ways. This doesn't make dvdnavsrc fully functional,
	but moves it forward.

	Fixes: #476149
	Patch By: Simone Gotti <simone.gotti@email.it>

	* ext/dvdnav/gst-dvd:
	Update the simple dvdnavsrc gst-launch example to work for 0.10

2008-03-03  Peter Kjellerstedt  <pkj@axis.com>

	* configure.ac:
	Use AG_GST_CHECK_PLUGIN and AG_GST_DISABLE_PLUGIN to simplify which
	plug-ins are included/excluded. (#498222)

2008-02-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/mad/gstmad.c: (gst_mad_sink_event):
	* gst/mpegaudioparse/gstmpegaudioparse.c:
	(gst_mp3parse_sink_event):
	Push EOS, FLUSH_STOP and NEWSEGMENT immediately instead
	of dropping and leaking them.

2008-02-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/mad/gstmad.c: (gst_mad_dispose), (gst_mad_sink_event),
	(gst_mad_chain):
	* ext/mad/gstmad.h:
	* gst/mpegaudioparse/gstmpegaudioparse.c: (gst_mp3parse_dispose),
	(gst_mp3parse_sink_event), (gst_mp3parse_emit_frame):